// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> render Paragraph with defalut props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_color_default mfui-paragraph_space_wide mfui-paragraph_has-margin"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> render Paragraph with passed props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_align_right mfui-paragraph_color_purple mfui-paragraph_space_wide test"
>
  Test paragraph text
</p>
`;
